# titanic-axa

./: README.md  docker-compose.yaml
api/: Dockerfile  README.md  pyproject.toml  requirements.txt
api/app/: main.py
api/app/core/: config.py
api/app/db/: base.py  session.py  titanic.db
api/app/models/: passenger.py
api/app/routes/: ingest.py  passengers.py
api/app/services/: ingest_service.py  passenger_service.py
client/: Dockerfile  package-lock.json  package.json
client/src/: App.tsx
client/src/api/: passengersApi.ts
client/src/components/: ChartSelect.tsx  Filter.tsx  Filters.tsx  PassengerChart.tsx  PassengerTable.tsx
client/src/components/ToggleSelect/: ToggleSelect.module.css  ToggleSelect.tsx
client/src/hooks/: usePassenger.ts
client/src/pages/: Dashboard.tsx
client/src/types/: Passenger.ts
client/src/utils/: common.ts  fetcher.ts
